fixed li size on mobile

--- a/style.css
+++ b/style.css
@@ -65,6 +65,10 @@ h2 {
     p {
         font-size: 12px; /* Make text more compact */
     }
+
+    li {
+        font-size: 12px;
+    }
 }
 
 .form-group {
